# binary-magic-squares

./: .gitignore  README.md  main.py  pyproject.toml  pytorch.py
.github/workflows/: test-workflow.yml
binary_magic_squares/: core.py  pytorch.py
tests/: test_numpy.py  test_torch.py
