[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "binary-magic-squares"
version = "0.1.0"
authors = [
    {name = "Alain Riou", email = "alain.riou@sony.com"}
]
description = "Generate Binary Magic Squares"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["numpy"]

[project.optional-dependencies]
pytorch = ["torch"]
test = ["pytest"]

[project.urls]
source = "https://github.com/aRI0U/binary-magic-squares"

[tool.pytest.ini_options]
testpaths = "tests/"
